[metadata]
description = Django Cart.
long_description = file: README.rst
author = Oleg Kleschunov
author_email = igorkleschunov@gmail.com
url = https://github.com/LowerDeez/ok-cart
home-page = https://github.com/LowerDeez/ok-cart
keywords = python, django, cart, e-commerce
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=2.2
    six
    mock

[isort]
known_first_party = ok_cart
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = ok_cart
branch = True
omit =
    ok_cart/migrations/*
[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/ok_cart
